# slurm_query

./: Cargo.toml  README.md
src/: ansi.rs  arrow_utils.rs  escape.rs  main.rs
