[package]
name = "slurm_query"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
description = "A simple web interface for querying Slurm job data."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
# These arrow versions are deliberately picked to be the same as the ones used by DuckDB.
arrow = "49.0.0"
arrow-schema = "49.0.0"
axum = "0.7.4"
duckdb = { version = "0.9.2", features = ["json"] }
prqlc = { version = "0.11.2", features = ["duckdb"] }
serde = { version = "1.0.196", features = ["derive"] }
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["macros", "process", "rt-multi-thread", "fs"] }
